# GTK4-Adwaita-1-Example

./: .gitignore  CMakeLists.txt  README.md  adwaita-test copy.c  adwaita-test.c  adwaita.c
.cache/clangd/index/: adwaita-test.c.30765569EAC8EB54.idx  main.c.74E8A0B3911605F1.idx  meu-app.c.4076168C224D1FFC.idx
docs/: AdwApplicationWindow.md  GTK4.md  GtkButton.md  GtkGrid.md  ProjectStruct.md  StyleCSS.md
include/: app_window.h  window.h
src/: app_window.c  window.c
style/: main.css
ui/: adwaita_window.ui  window_adwaita.ui  window_adwaita_v2.cmb  window_adwaita_v2.ui
